# acessContro-IOT

./: CMakeLists.txt  main.c
modules/buzzer/: buzzer.c  buzzer.h
modules/display_oled/: display_oled.c  display_oled.h
modules/input_handler/: input_handler.c  input_handler.h
modules/led/: led_control.c  led_control.h
